// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package user;

option go_package = "github.com/gogf/gf-demo-grpc/api/user/v1";

import "pbentity/user_main.proto";

service Auth {
  rpc Login(LoginReq) returns (LoginRes) {}
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoRes) {}
}

message LoginReq {
  string Username = 1; // v: required|length: 1, 20
  string Password = 2; // v: required|length: 8, 30
}

message LoginRes {
  string Token = 1;
}

message GetUserInfoReq {
  string Token = 1; // v: required
}

message GetUserInfoRes {
  pbentity.UserMain user = 1;
}