// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "user/api/pbentity";

import "google/protobuf/timestamp.proto";

message UserMain {
    int64                     Id        = 1; //   
    string                    Username  = 2; //   
    string                    Password  = 3; //   
    string                    Phone     = 4; //   
    google.protobuf.Timestamp CreatedAt = 5; //   
    google.protobuf.Timestamp UpdatedAt = 6; //   
}